--- a/secure.Rmd
+++ b/secure.Rmd
@@ -11,10 +11,10 @@ git est un logiciel qui s'avere tres vite indispensable dans le cadre de la cons
 + travailler de maniere collaborative
 + sauvegarder son code sur un serveur dédié
 
-Toute modification dans le code doit etre suivi et documentée, on doit être capable de savoir qui a fait quoi et quand, et pourquoi.
+Toute modification dans le code doit etre suivi et documentée, on doit être capable de savoir qui a fait quoi et quand, et pourquoi. 
 
 
-Si vous n'etes pas familier le git, n'aillez pas peur et le peu de contrainte imposé par l'usage de cet outil est largement compensé par le gain apporté.
+Si vous n'etes pas familier le git, n'aillez pas peur et le peu de contrainte imposé par l'usage de cet outil est largement compensé par les gains apportés.
 
 Git peut etre utilisé de différentes façons et différentes approches existent. L'exhausitivité des différentes approches possibles sortent du cadre de ce livre, et d'autres ressources existent par ailleurs. Nous vous invitons a suivre ces différents lien :
 
@@ -22,9 +22,6 @@ Git peut etre utilisé de différentes façons et différentes approches existen
 + un site qui explicite git flow
 + un site avec les question/reponses classique de ce que l'on souhaite faire avec git
 
-git est rarement utilisé seul, et dans les solutions qui implémentent git on va aussi trouver des outil de suivi de ticket, un kanban etc
-
-Git s'intégrer tres bien avec l'IDE Rstudio, ainsi, pendant que vous développez utiliser git peut se résumer à cliquer sur un bouton de temps en temps.
 
 TODO / un dessin ?
 
@@ -35,27 +32,29 @@ Sans rentrer dans les détail, sachez que :
 vous allez faire des commit ( qui correspondent a des modifications que vous voulez figer),
 que chaque commit se documente ( exemple : "rajout du graphique dans l'onglet analyse de l'application" , ou "correction du bug d'export du docx").
 
-Un ensemble de commit, peu ensuite etre  envoyé sur le serveur, il s'agit d'un Push. Vos collaborateur pourront alors récuperer vos modification en faisant un pull.(et réciproquement)
+Un ensemble de commit, peut ensuite etre  envoyé sur le serveur, il s'agit d'un Push. Vos collaborateurs pourront alors récuperer vos modifications en faisant un pull.(et réciproquement)
 
 le trio commit - push - pull correspond aux outils du quotidien de git.
 
 Branche
 
-Dans les faits on utilise la notion de branche pour organiser son travail et ses idées ( ou pour ne pas se marcher sur les pieds entre collaborateur).
-La branche principale s'appelle le master, dans l'idéal on ne travaille jamais directement dedans, et cette branche devrait toujours contenir une version fonctionelle, montrable de l'application
-Les branche de dev correspondent a des zones de travail dans lesquelles ont tente de corriger des bugs ou ajouter des fonctionalités à l'application. les modifications apportéee dans ces branches de dev seront ensuite deversé (directement ou non) dans la branche master ( ou release-candidate )
+Dans les faits on utilise la notion de branche pour organiser son travail et ses idées ( ou pour ne pas se marcher sur les pieds entre collaborateurs).
+La branche principale s'appelle le master, dans l'idéal on ne travaille jamais directement dedans, et cette branche devrait toujours contenir une version fonctionelle, montrable de l'application.
+Les branche de dev correspondent a des zones de travail dans lesquelles ont tente de corriger des bugs ou ajouter des fonctionalités à l'application. Les modifications apportéee dans ces branches de dev seront ensuite deversées (directement ou non) dans la branche master ( ou release-candidate )
 
-concretement, un developpeur s'attaquant à la résultion d 'un soucis , fabriquera une nouvelle branche spécifique à la résultion de ce soucis
+concretement, un developpeur s'attaquant à la résolution d 'un soucis , fabriquera une nouvelle branche spécifique à la résultion de ce soucis
 
 Issue
 
-Des outils comme github ou gitlab permettent de suivre des issue ( bug ou fonctionnalité a faire), d'associer des issues a des commit , de discuter de ces issues entre collaborateur et beta testeur/commanditaire. Disposer d'une telle plateforme est un gain considérable dans la
-productivité.
+Des outils comme github ou gitlab permettent de suivre des issue ( bug ou fonctionnalité a faire),d'organiser ces tache dans un kanban, avec des dates d'échéance etc. Ces issues peuvent etre associé a des commit cela permet de discuter de ces issues entre collaborateur et beta testeur/commanditaire. Disposer d'une telle plateforme est un gain considérable dans la
+productivité. Et tout est y est centralisé
+
+Git s'intégre trés bien avec l'IDE Rstudio, ainsi, pendant que vous développez utiliser git peut se résumer à cliquer sur un bouton de temps en temps. (un bouton commit, un bouton pull et un bouton push)
+
+L'usage de git n'est pas réservé aux applications qui s'écrivent à plus de deux mains, et a partir de une personne utiliser git est une bonne idée et fait partie des bonnes pratiques.
 
 
-
-
-
+développer une application shiny, c'est avant tout développer une application. quelque soit le langage des outils dédié à cela existe, git en fait parti. Et ce n'est pas parce q'uil s'agit de R, qu'il ne faut pas utiliser ces outils.
 
 
 
