--- a/javascript.Rmd
+++ b/javascript.Rmd
@@ -4,12 +4,16 @@
 knitr::opts_chunk$set( comment = "", eval = FALSE)
 ```
 
-In its core, building a Shiny app is building a JavaScript app that can talk with an R session. 
-This process is hidden from the common Shiny developer, who usually works on everything from R. 
-In the end, for most of the Shiny apps out there, everything is done with R, but when you are writing UI elements in Shiny what you are actually doing is building a series of HTML tags, which are then linked to JavaScript events. 
+In its core, __building a Shiny app is building a JavaScript app__ that can talk with an R session. 
+This process is invisible for most Shiny developers, who usually do everything with R. 
+And in the end, it's the case: most of the Shiny apps out there are written with R. 
+
+But in fact, when you are writing UI elements in Shiny, __what you are actually doing is building a series of HTML tags, which are then linked to JavaScript events__. 
 Later on, when the app is running, these JavaScript events will communicate with R, in the sense that they will send data to R, and receive data from R. 
-Most of the time, when this JavaScript events are receiving data, that also means that they modify the page the user sees.
-What happens under the hood is a little bit complex and out of scope for this book, but the general idea is there: R talks to your browser through a web socket, and this browser talks to R through the same web socket.
+Most of the time, when these JavaScript events are receiving data, they modify the page the user sees.
+What happens under the hood is a little bit complex and out of scope for this book, but the general idea is there: R talks to your browser through a web socket (that you can imagine as a small "phone line" with both softwares listening on one hand^[
+See this [dev.to](https://dev.to/buzzingbuzzer/comment/g0g) post for a quick introduction to the general concept of web socket
+]), and this browser talks to R through the same web socket.
 
 // TODO: create here a simple Flowchart 
 
@@ -17,31 +21,29 @@ What happens under the hood is a little bit complex and out of scope for this bo
 
 // R <- (Web Socket) <- JS 
 
-It's important to note here that the communication happens in both ways: from R to JavaScript, and from JavaScript to R. 
+It's important to note here that the __communication happens in both ways__: from R to JavaScript, and from JavaScript to R. 
 In fact, when we write a piece of code like `sliderInput("plop", "this", 1, 10, 5)`, what we are doing is creating a binding between JavaScript and R, where JavaScript listens to any event happening in the browser on the slider with the id `"plop"`, and whenever JavaScript detects that something happens to this element, something (most of the time its value) is sent back to R. 
-With `output$bla <- renderPlot({})`, what we are doing is making the two communicates the other way around: we are telling JavaScript to listen to any incoming data from R for the `id` `"bla"`, and whenever JavaScript sees incoming data from R, it puts it into the proper HTML tag. 
+With `output$bla <- renderPlot({})`, what we are doing is making the two communicates the other way around: we are telling JavaScript to listen to any incoming data from R for the `id` `"bla"`, and whenever JavaScript sees incoming data from R, it puts it into the proper HTML tag (here, JavaScript inserts in the page the image received from R). 
 
-So even if everything happens in R, we __are__ writing a web application (i.e. HTML, CSS and JavaScript elements), from R. 
-Once you've realized that, the possibilities are endless: in fact almost anything doable in a web app can be done in Shiny. 
-What this also implies is that getting (even a little bit) better at writing HTML, CSS and especially JavaScript will make your app better, lighter, and more user friendly. 
-JavaScript is a language that has been designed to interact with a web page: change element appearances, hide and show things, click somewhere, show alerts and prompts... 
-What that means is that knowing just enough JavaScript can improve the quality of your app: especially when you've been using R to build some complex UI renderings: think conditional panels, simulating a button click from the server, hide and show elements... 
+So even if everything is written with R, we __are__ writing a web application, i.e. HTML, CSS and JavaScript elements. 
+Once you've realized that, the possibilities are endless: in fact almost anything doable in a "classic" web app can be done in Shiny. 
+What this also implies is that getting (even a little bit) better at writing HTML, CSS and especially JavaScript will make your app better, lighter, and more user friendly, as JavaScript is a language that has been designed to interact with a web page: change element appearances, hide and show things, click somewhere, show alerts and prompts... 
+__Knowing just enough JavaScript can improve the quality of your app__: especially when you've been using R to build some complex UI renderings: think conditional panels, simulating a button click from the server, hide and show elements... 
 All these things are good examples of where you should be using JavaScript instead of building more or less complex `renderUI` or `insertUI` patterns in your server.
+A good rule to live
 
 Moreover, the number of JavaScript libraries available on the web is tremendous ; and the good news is that Shiny has everything it needs to bundle external JavaScript libraries inside your application^[
 This can also be done by wrapping a JS libraries inside a package, which will later be used inside an application. 
 See for example [`{glouton}`](https://github.com/ColinFay/glouton), which is a wrapper around the [`js-cookie`](https://github.com/js-cookie/js-cookie) JavaScript library.
 ].
 
-This is what this part aims to do: giving you just enough JavaScript knowledge to lighten your Shiny App, and improve the global user and developer experience.
-In this part, we'll first see some JavaScript basics. 
-This JS code can be used "client-side" only, i.e. only in your browser, by making R & JS communicate with each other. 
-We'll also see this in in this chapter: how to make R and JavaScript exchange data. 
+This is what this part of the book aims at: giving you just enough JavaScript knowledge to lighten your Shiny App, in order to improve the global user and developer experience.
+In this part, we'll first see some JavaScript basics, which can be used "client-side" only, i.e. only in your browser, or by making R & JS communicate with each other. 
 In this part, we'll also explore common patterns for JavaScript in Shiny. 
 Finally, we'll quickly present some of the functions from `{golem}` which are built on top of JavaScript. 
 
 > Note that this chapter is not supposed to be a comprehensive JavaScript course. 
-External resources are linked all throughout this chapter if you want to dive deeper into JavaScript.
+External resources are linked all throughout this chapter and at the end if you want to dive deeper into JavaScript.
 
 ## A quick introduction to JavaScript
 
@@ -51,17 +53,17 @@ See linked resources to learn more.
 ].
 There are three ways to include the JavaScript code inside your web app: 
 
-+ As an external file, which is delivered to the browser alongside your main application page
-+ Inside a `<script>` HTML tag your page
++ As an external file, which is served to the browser alongside your main application page
++ Inside a `<script>` HTML tag inside your page
 + On a specific tag, for example by adding an `onclick` event straight on the tag
 
-> Note that the good practice when it comes to include JavaScript is to add the code inside an external file. 
+> Note that the good practice when it comes to include JavaScript is to add the code inside an external file.
 
 If you're working with `{golem}`, including a JavaScript file is performed using two functions: 
 
-+ `golem::add_js_file("name")`, which adds a standard JavaScript file, i.e. one which is not meant to be used to communicate with R (which is the "modern standard way" to do it).
++ `golem::add_js_file("name")`, which adds a standard JavaScript file, i.e. one which is not meant to be used to communicate with R.
 We'll see in the first part of this chapter how to add JavaScript code there.
-+ `golem::add_js_handler("name")`, which creates a file with a skeleton for shiny handlers (which is specific to Shiny). 
++ `golem::add_js_handler("name")`, which creates a file with a skeleton for Shiny handlers. 
 We'll see this second type of elements in the `JavaScript <-> Shiny communication` part.
 
 OK, good, but what do we do now?
@@ -69,8 +71,9 @@ OK, good, but what do we do now?
 ### Understanding html, class, and id
 
 You have to think of a web page as a tree, where the top of the webpage is the root node, and every element in the page is a node in this tree (this tree is called a DOM, for Document Object Model). 
-And of course, you can work on any of these HTML node with JavaScript: modify it, bind and/or listen to events, hide and show it...
-But of course, you have to find a way to identify these elements: either as a group of elements or as a unique element inside the whole tree: that's what html semantic elements, classes and ids are made for.
+__You can work on any of these HTML node with JavaScript__: modify it, bind and/or listen to events, hide and show it...
+But first, __you have to find a way to identify these elements__: either as a group of elements or as a unique element inside the whole tree. 
+That's what html semantic elements, classes and ids are made for.
 Consider this piece of code:
 
 ```{r echo = TRUE, eval = FALSE}
@@ -89,7 +92,7 @@ fluidPage(
 ```
 
 
-This `{shiny}` code creates a piece of HTML code, which contains three nodes: a `div`, which is a container, an `h2`, which is a level two header, a button which has an id and a class.
+This `{shiny}` code creates a piece of HTML code, which contains three nodes: a `div` with a specific class (a BootStrap container), an `h2`, which is a level two header, and a button which has an id and a class.
 Both are included into the `div`. 
 Let's detail what we've got here:
 
@@ -105,7 +108,9 @@ The `jQuery` framework is natively included in Shiny.
 
 > jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. 
 
-jQuery is a very (like, very) popular JavaScript library which is designed to manipulate the DOM, its events and its elements. 
+`r right_link("jQuery home page", "https://jquery.com/")`
+
+jQuery is a very popular JavaScript library which is designed to manipulate the DOM, its events and its elements. 
 It can be used to do a lot of things, like hide and show, change class, click somewhere... 
 And to be able to do that, it comes with the notion of selectors, which will be put between `$()`.
 You can use, for example:
@@ -116,8 +121,8 @@ You can use, for example:
 
 + `$("button:contains('this')")` to refer to the buttons with a text containing `'this'`
 
-You can also use special HTML attributes.
-For example:
+You can also use special HTML attributes, which are specific to a tag.
+For example, the following HTML code:
 
 ``` html
 <a href = "https://thinkr.fr" data-value = "panel2">ThinkR</a>
@@ -130,12 +135,12 @@ You can refer to these with `[]` after the tag name.
 
 + `$('a[data-value="panel2"]')` refers to link(s) with  `data-value` being `"panel2"`
 
-All these selectors, along many others, are used to identify one or more node in the big tree which is a web page. 
+All these selectors, along many others, are __used to identify one or more node(s) in the big tree which is a web page__. 
 Once we've identified these elements, we can either extract or change data contained in these nodes, or launch methods contained inside these nodes.
 Indeed JavaScript, as R, can be used as a functional language, but most of what we do is done in an object-oriented way. 
 In other words, you'll interact with objects from the web page, and these objects contain data and methods. 
 
-Note that these behavior is not specific to jQuery: elements can also be selected with standard JavaScript. 
+Note that this is not specific to jQuery: elements can also be selected with standard JavaScript. 
 jQuery has the advantage of simplifying selections and actions, and to be cross-platform, making it easier to ship applications that can work on all major browsers. 
 And, it comes with Shiny for free! 
 
@@ -160,9 +165,9 @@ output$ui <- renderUI({
 })
 ```
 
-+ `alert("message")` uses the built-in alert-box mechanism from the user's browser (i.e., the `alert()` function is not part of jQuery but it's built inside your browser).
-It works well as it relies on the browser instead of R. 
-For example, you can use this functionality to replace a call to `{shinyalert}`: the result is a little bit less aesthetically pleasing, but that's easier to implement and maintain.
++ `alert("message")` uses the built-in alert-box mechanism from the user's browser (i.e., the `alert()` function is not part of jQuery but it's built inside the user's browser).
+It works well as it relies on the browser instead of relying on R or on specific JavaScript library. 
+You can use this functionality to replace a call to `{shinyalert}`: the result is a little bit less aesthetically pleasing, but that's easier to implement and maintain.
 
 + `var x = prompt("this", "that");` this function open the built-in prompt, which is a text area where the user can input text. 
 With this code, when the user clicks on "OK", the text is stocked in a variable `x`, which you can then send back to R (see further part down this chapter for more info about how to do that). 
@@ -189,8 +194,8 @@ observeEvent(input$ok, {
 })
 ```
 
-+ `$('#id').css('color', 'blue');` changes the css attributes of the selected element(s). 
-Here, we're switching to blue on the `#id` element.
++ `$('#id').css('color', 'green');` changes the css attributes of the selected element(s). 
+Here, we're switching to green on the `#id` element.
 
 + `$("#id").text( "this" );` changes the text content to "this". 
 This can be used to replace 
@@ -211,8 +216,9 @@ IT can be used as a replacement for `shiny::removeUI()`, or as a conditional UI.
 ### Where to put them - introduction to JavaScript events
 
 OK, now that we've got some ideas about JS code that can be used in Shiny, where do we put them? 
-HTML and JS have a concept called `events`, which happens when the user manipulates the webpage: when the user clicks, hovers (the mouse goes over an element), press the keyboard... 
-All these events can trigger a JavaScript function. 
+HTML and JS have a concept called `events`, which are... well events that happen when the user manipulates the webpage: when the user clicks, hovers (the mouse goes over an element), press the keyboard... 
+All these events can be used to trigger a JavaScript function. 
+
 Here are some example of adding JavaScript functions to DOM events:
 
 +`onclick`
@@ -238,7 +244,6 @@ plotOutput(
 
 Here is for example a small Shiny app that implements this behavior:
 
-
 ```{r eval = FALSE}
 library(shiny)
 library(magrittr)
@@ -253,7 +258,7 @@ ui <- function(request){
 }
 
 server <- function(input, output, session){
-  output$plop <- renderPlot({
+  output$plot <- renderPlot({
     plot(iris)
   })
 }
@@ -261,7 +266,9 @@ server <- function(input, output, session){
 shinyApp(ui, server)
 ```
 
-Real Life example : https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L109 and https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L305
+You can find a real Life example of this `tagAppendAttributes` in the `{tidytuesday201942}` app: 
+
++ [R/mod_dataviz.R#L109](https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L109), where the click on the plot generates the creation of a Shiny input (we'll see this below)
 
 That, of course, works well with very small JavaScript code. 
 For longer JavaScript code, you can write a function inside and external file, and add it to your app. 
@@ -341,16 +348,16 @@ Now that we've seen some client-side optimization, i.e. R doesn't do anything wi
 
 ### From R to JavaScript 
 
-Calling JS from the server side is done by defining a series of `CustomMessageHandler`: these are functions with one argument that can then be called using the `session$sendCustomMessage()` method from the server. 
+Calling JS from the server side (i.e from R) is done by defining a series of `CustomMessageHandler`: these are functions with one argument that can then be called using the `session$sendCustomMessage()` method from the server. 
 
 You can define them using this skeleton:
 
-```{r echo = FALSE}
+```{r echo = FALSE, eval = TRUE}
 readLines("golex/inst/app/www/plop.js") %>%
   glue::as_glue()
 ```
 
-> `golem::add_js_handler()`
+This skeleton is the one generated by `golem::add_js_handler("plop")`.
 
 Then, it will be called from server-side with:
 
@@ -393,14 +400,14 @@ observe({
 ### From JavaScript to R
 
 How to do the other way around (from JS to R)?
-Shiny apps contain an object called `Shiny`, which can be used to send values to R, by creating an `IputValue`. 
+Shiny apps, in the browser, contain an object called `Shiny`, which can be used to send values to R, by creating an `IputValue`. 
 For example, with: 
 
 ```{js, eval = FALSE, echo = TRUE}
 Shiny.setInputValue("rand", Math.random())
 ```
 
-You'll bind an input that can be caught from the server side with:
+you'll bind an input that can be caught from the server side with:
 
 ```{r eval = FALSE}
 observeEvent( input$rand , {
@@ -434,7 +441,7 @@ $(function(){
 });
 ```
 
-These events (getting the user name and the last plot clicked), can be caught from the server side with:
+These events (getting the user name and the last plot clicked), can then be caught from the server side with:
 
 ```{r eval = FALSE}
 observeEvent( input$username , {
@@ -458,9 +465,9 @@ Listening on http://127.0.0.1:5495
 ── User name: ─────────────────────────────────────────────────────
 [1] "Colin"
 ── Last plot clicked: ─────────────────────────────────────────────
-[1] "plot"
+[1] "plota"
 ── Last plot clicked: ─────────────────────────────────────────────
-[1] "plopt"
+[1] "plopb"
 ```
 __Important note__: if you're using modules, you'll need to pass the namespacing of the `id` to be able to get it back from the server. 
 This can be done using the `session$ns` function, which comes by default in any golem-generated module. 
@@ -511,11 +518,11 @@ These functions are added by default with `golem::activate_js()` in `app_ui`.
 
 Then they are called with `golem::invoke_js("function", "element")`.
 
-This `element` defines is a series of elements (most of the time scalar elements) that can be used to select the DOM node you need to interact with.
+This `element` is a series of elements (most of the time scalar elements) that can be used to select the DOM node you need to interact with.
 It can be a full jQuery selector, an id or a class.
 Note that you can pass multiple elements, with `invoke_js` `...` parameters
 
-### `golem::activate_js()`
+### `golem::invoke_js()`
 
 + `showid` & `hideid`, `showclass` & `hideclass` show and hide elements through their id or class.
 
@@ -539,4 +546,20 @@ See `?golem::activate_js` for a full list of built-in functions.
 
 Here is a list of external resources to learn more about JavaScript: 
 
-// TODO 
+### JavaScript basics 
+
++ [Mozilla JavaScript](https://developer.mozilla.org/en-US/docs/Web/JavaScript)
++ [w3schools JavaScript](https://www.w3schools.com/js/default.asp)
++ [Free Code Camp](https://www.freecodecamp.org/)
++ [JavaScript For Cats](http://jsforcats.com/)
++ [Learn JS](https://www.learn-js.org/)
+
+### jQuery
+
++ [jQuery Learning Center](https://learn.jquery.com/)
++ [w3schools jQuery](https://www.w3schools.com/jquery/default.asp)
+
+### Intermediate / advanced JavaScript
+
++ [Eloquent JavaScript](https://eloquentjavascript.net/)
++ [You Don't Know JS Yet](https://github.com/getify/You-Dont-Know-JS)
